[package]
name = "webpaste"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
chardetng = "0.1.17"
chrono = "0.4.41"
deadpool-sqlite = "0.12.1"
hex = "0.4.3"
humantime = "2.2.0"
magic = "0.16.2"
nyquest = { version = "0.3.0", features = ["async"] }
nyquest-preset = { version = "0.3.0", features = ["async"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "bytes", "fs", "net", "time"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
